# rdx_os

./: Cargo.toml  README.md
rdx_hal/: Cargo.toml
rdx_hal/src/: defines.rs  lib.rs  pca_pin.rs
scripts/: prerequisites.sh
src/: main.rs
