[package]
name = "rdx_os"
version = "0.1.0"
edition = "2024"
default-run = "rdx_os"
authors = [ "Samuel Nösslböck <samuel.noesslboeck@gmail.com>" ]
license = "MIT"

[dependencies]
lcd-menu = "0.1.0"

syact = { git = "https://github.com/SamuelNoesslboeck/syact" }
systep = { git = "https://github.com/SamuelNoesslboeck/systep" }

rdx_hal = { path = "./rdx_hal" }
rppal = { version = "0.22.1", features = ["embedded-hal"] }
futures = "0.3.32"

[workspace]
members = [ "rdx_hal" ]


####################
##  OTHER ROBOTS  ##
####################
[[bin]]
name = "syomat"
path = "bin/syomat/main.rs"

