[package]
name = "rdx_hal"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-hal = "1.0.0"
lcd_1602_i2c = "0.3.0"
pwm-pca9685 = "1.0.0"
rotary-encoder-hal = "0.6.0"
rppal = { version = "0.22.1", features = ["embedded-hal"] }

syact = { git = "https://github.com/SamuelNoesslboeck/syact" }
systep = { git = "https://github.com/SamuelNoesslboeck/systep" }
